--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ opt-einsum==3.3.0
 optree==0.11.0
 overrides==7.7.0
 packaging==24.0
+pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.3
 pillow==10.2.0
@@ -93,6 +94,7 @@ Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+pytz==2024.1
 pywin32==306
 pywinpty==2.0.13
 PyYAML==6.0.1
@@ -125,6 +127,7 @@ tornado==6.4
 traitlets==5.14.2
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.10.0
+tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.1
 wcwidth==0.2.13
